# unreal-mcp

./: README.md
MCPGameProject/: .clang-format  Build.bat  Clean.bat  MCPGameProject.sln  RunTests.ps1
MCPGameProject/Plugins/UnrealMCP/: README.md  UnrealMCP.uplugin
MCPGameProject/Plugins/UnrealMCP/Source/UnrealMCP/: UnrealMCP.Build.cs
MCPGameProject/Plugins/UnrealMCP/Source/UnrealMCP/Private/: MCPServerRunnable.cpp  UnrealMCPBridge.cpp
MCPGameProject/Plugins/UnrealMCP/Source/UnrealMCP/Private/Commands/: CommonUtils.cpp  CompileBlueprint.cpp  CreateBlueprint.cpp  SpawnBlueprint.cpp  UnrealMCPBlueprintCommands.cpp  UnrealMCPBlueprintCreationCommands.cpp  UnrealMCPBlueprintNodeCommands.cpp  UnrealMCPBlueprintSpawnCommands.cpp  UnrealMCPEditorCommands.cpp  UnrealMCPEnhancedInputCommands.cpp  UnrealMCPInputCommands.cpp  UnrealMCPProjectCommands.cpp  UnrealMCPRegistryCommands.cpp  UnrealMCPUMGCommands.cpp  UnrealMCPWidgetCommands.cpp
MCPGameProject/Plugins/UnrealMCP/Source/UnrealMCP/Private/Core/: MCPRegistry.cpp  MCPTypes.cpp
MCPGameProject/Plugins/UnrealMCP/Source/UnrealMCP/Private/Factories/: BlueprintActorFactory.cpp
MCPGameProject/Plugins/UnrealMCP/Source/UnrealMCP/Private/Services/: ActorService.cpp  BlueprintCreationService.cpp  BlueprintGraphService.cpp  BlueprintIntrospectionService.cpp  BlueprintService.cpp  InputService.cpp  ViewportService.cpp  WidgetService.cpp
MCPGameProject/Plugins/UnrealMCP/Source/UnrealMCP/Private/Tests/: ActorServiceTests.cpp  BlueprintCreationServiceTests.cpp  BlueprintGraphServiceTests.cpp  BlueprintServiceTests.cpp  InputServiceTests.cpp  TestUtils.cpp  TestUtils.h  ViewportServiceTests.cpp  WidgetServiceTests.cpp
MCPGameProject/Plugins/UnrealMCP/Source/UnrealMCP/Public/: MCPServerRunnable.h  UnrealMCPBridge.h
MCPGameProject/Plugins/UnrealMCP/Source/UnrealMCP/Public/Commands/: CommonUtils.h  CompileBlueprint.h  CreateBlueprint.h  SpawnBlueprint.h  UnrealMCPBlueprintCommands.h  UnrealMCPBlueprintCreationCommands.h  UnrealMCPBlueprintNodeCommands.h  UnrealMCPBlueprintSpawnCommands.h  UnrealMCPEnhancedInputCommands.h  UnrealMCPInputCommands.h  UnrealMCPProjectCommands.h  UnrealMCPRegistryCommands.h  UnrealMCPWidgetCommands.h
MCPGameProject/Plugins/UnrealMCP/Source/UnrealMCP/Public/Core/: MCPRegistry.h  MCPTypes.h  Result.h
Python/: .flake8  .mypy.ini  Makefile  README.md  pyproject.toml  server.py  unreal_mcp_server.py
Python/.github/workflows/: ci.yml
Python/core/: __init__.py  connection.py  errors.py  types.py
Python/scripts/actors/: test_cube.py
Python/scripts/blueprints/: test_create_and_spawn_blueprints_with_different_components.py  test_create_and_spawn_cube_blueprint.py
Python/scripts/node/: test_component_reference.py  test_create_bird_blueprint_with_input_and_camera.py  test_enhanced_input.py  test_input_mapping.py  test_physics_variables.py
Python/services/: __init__.py  blueprint_node_service.py  blueprint_service.py  editor_service.py  input_service.py  project_service.py  registry_service.py  service_manager.py  umg_service.py
Python/tests/: __init__.py  test_blueprint_service.py  test_connection.py  test_editor_service.py  test_mcp_integration.py  test_project_service.py  test_tools_mcp.py  test_types.py  test_umg_service.py
Python/tools/: __init__.py  blueprint_node_tools.py  blueprint_tools.py  blueprint_tools_new.py  editor_tools.py  editor_tools_new.py  enhanced_input_tools.py  input_tools.py  node_tools.py  project_tools.py  project_tools_new.py  registry_tools.py  umg_tools.py  umg_tools_new.py
(+103 files in other folders)
